--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "url": "Inventory_Optimizer"
   },
   "devDependencies": {
-    "electron": "^30.0.0"
-  }
+    "electron": "^30.0.1"
+  },
+  "keywords": []
 }
